# entangle

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PARALLEL_DEV_GUIDE.md  README.md  run-agents.sh  zerocopy-ipc-architecture.md
.github/workflows/: ci.yml
config/: entangle.ron
contracts/: mock.rs  shared_types.rs
crates/entangle/: Cargo.toml
crates/entangle-derive/: Cargo.toml
crates/entangle-derive/src/: lib.rs
crates/entangle-derive/tests/: compile_tests.rs
crates/entangle-derive/tests/ui/: fail_no_repr.rs  fail_no_repr.stderr  fail_string_field.rs  fail_string_field.stderr  fail_union.rs  fail_union.stderr  fail_vec_field.rs  fail_vec_field.stderr  pass_basic_struct.rs  pass_fieldless_enum.rs  pass_generic_struct.rs  pass_nested_struct.rs
crates/entangle-lockfree/: Cargo.toml
crates/entangle-lockfree/src/: atomic_bitset.rs  index_set.rs  lib.rs  mpmc_container.rs  relocatable.rs  spsc_queue.rs
crates/entangle-platform/: Cargo.toml
crates/entangle-platform/src/: contracts.rs  error.rs  event.rs  file_lock.rs  lib.rs  mock.rs  process_monitor.rs  shm.rs  signal.rs
crates/entangle-transport/: Cargo.toml
crates/entangle-transport/src/: channel.rs  contracts.rs  data_segment.rs  lib.rs  mock.rs  pool_alloc.rs  segment_mgr.rs
crates/entangle/benches/: latency.rs  lockfree.rs  throughput.rs
crates/entangle/examples/: blackboard.rs  event.rs  multi_process.rs  pubsub.rs  reqres.rs  waitset.rs
crates/entangle/src/: config.rs  contracts.rs  error.rs  lib.rs  mock.rs  node.rs  prelude.rs  sample.rs  waitset.rs
crates/entangle/src/port/: client.rs  listener.rs  mod.rs  notifier.rs  publisher.rs  reader.rs  server.rs  subscriber.rs  writer.rs
crates/entangle/src/service/: blackboard.rs  config.rs  event.rs  lifecycle.rs  mod.rs  pubsub.rs  registry.rs  reqres.rs
crates/entangle/tests/: cross_process.rs  integration.rs  proptest_qos.rs
skills/: agent-a-platform.md  agent-b-lockfree.md  agent-c-transport.md  agent-d-service.md  agent-e-derive.md
