[workspace]
members = [
    "crates/entangle",
    "crates/entangle-platform",
    "crates/entangle-lockfree",
    "crates/entangle-transport",
    "crates/entangle-derive",
]
resolver = "2"

[workspace.dependencies]
# 플랫폼
nix = { version = "0.29", features = ["mman", "fs", "signal", "process"] }
libc = "0.2"

# 직렬화 / 설정
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# 에러 처리
thiserror = "2.0"

# 로깅
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lock-free 검증 (dev)
loom = "0.7"

# 테스트
proptest = "1.0"

# derive 매크로
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# 워크스페이스 내부 크레이트
entangle-platform = { path = "crates/entangle-platform" }
entangle-lockfree = { path = "crates/entangle-lockfree" }
entangle-transport = { path = "crates/entangle-transport" }
entangle-derive = { path = "crates/entangle-derive" }
