[package]
name = "entangle-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Derive macros for entangle zero-copy IPC (ZeroCopySafe)"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
trybuild = "1.0"
entangle = { path = "../entangle" }
