[package]
name = "entangle-lockfree"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lock-free data structures for entangle zero-copy IPC"

[dependencies]
tracing = { workspace = true }

[dev-dependencies]
loom = { workspace = true }
proptest = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
