[package]
name = "entangle-platform"
version = "0.1.0"
edition = "2021"
description = "Platform abstraction layer for entangle zero-copy IPC"

[dependencies]
nix = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
