[package]
name = "entangle-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Zero-copy transport layer for entangle IPC"

[dependencies]
entangle-platform = { workspace = true }
entangle-lockfree = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
