[package]
name = "entangle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Zero-copy IPC library for Rust — inspired by iceoryx2, redesigned from scratch"
readme = "../../README.md"

[dependencies]
entangle-platform = { workspace = true }
entangle-lockfree = { workspace = true }
entangle-transport = { workspace = true }
entangle-derive = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "lockfree"
harness = false
